<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OverlayPaint</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="edit">edit</string>
    <string name="hide">hide</string>
    <string name="start">start</string>
    <string name="stop">stop</string>
    <string name="erase">erase</string>
    <string name="clear">clear</string>
    <string name="save">save</string>
    <string name="cancel">cancel</string>
    <string name="exit">exit</string>
    <string name="show_overlay_paint_menu">show overlay paint menu.</string>

</resources>
